--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/sumucheng/ryoko-ui-react/issues"
   },
-  "homepage": "https://github.com/sumucheng/ryoko-ui-react#readme"
+  "homepage": "https://github.com/sumucheng/ryoko-ui-react#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^4.3.0",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
