--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "ryoko-ui-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/lib/index.js",
+  "types": "dist/lib/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE-ENV=development webpack-dev-server --config webpack.config.dev.js",
+    "build": "cross-env NODE-ENV=production webpack --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +21,19 @@
   },
   "homepage": "https://github.com/sumucheng/ryoko-ui-react#readme",
   "devDependencies": {
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
     "awesome-typescript-loader": "^5.2.1",
+    "cross-env": "^7.0.2",
     "html-webpack-plugin": "^4.3.0",
+    "svg-sprite-loader": "^4.3.0",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
