--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "@types/react-dom": "^16.9.7",
     "awesome-typescript-loader": "^5.2.1",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "svg-sprite-loader": "^4.3.0",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
