--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
+    "prism-react-renderer": "^1.1.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "svg-sprite-loader": "^4.3.0",
@@ -41,6 +42,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "raw-loader": "^4.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
