配置doc部署文件

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE-ENV=development webpack-dev-server --config webpack.config.dev.js",
-    "build": "cross-env NODE-ENV=production webpack --config webpack.config.prod.js"
+    "build": "cross-env NODE-ENV=production webpack --config webpack.config.prod.js",
+    "doc": "cross-env NODE-ENV=production webpack --config webpack.config.doc.js"
   },
   "repository": {
     "type": "git",
