--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ coverage
 .nyc_output
 
 /dist/*
+/doc/*
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
